--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -3,5 +3,8 @@
 @import "buttons";
 
 * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   font-family: "Brandon Grotesque", sans-serif;
 }
