--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -9,3 +9,8 @@
   box-sizing: border-box;
   font-family: "Brandon Grotesque", sans-serif;
 }
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
