--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2,6 +2,7 @@
 @import "colors";
 @import "buttons";
 @import "./pages/home.page";
+@import "./pages/_auth.page";
 
 * {
   margin: 0;
@@ -14,3 +15,5 @@ a {
   text-decoration: none;
   color: inherit;
 }
+
+   
